src/objects/c2g__codaSection__c.object
<CustomObject>
    <description>Stores a part of the formats saved from FinancialForce Print Formatter.</description>
    <fields>
        <fullName>c2g__Embedded__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Embedded</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>c2g__FormType__c</fullName>
        <label>FormType</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__FormatCode__c</fullName>
        <label>FormatCode</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__FormatData__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>FormatData</label>
        <referenceTo>c2g__codaFormatData__c</referenceTo>
        <relationshipLabel>Sections</relationshipLabel>
        <relationshipName>Sections</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__Height__c</fullName>
        <label>Height</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__PrintFormat__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PrintFormat</label>
        <referenceTo>c2g__codaPrintFormat__c</referenceTo>
        <relationshipLabel>Sections</relationshipLabel>
        <relationshipName>Sections</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__STName__c</fullName>
        <label>STName</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__SectionSequence__c</fullName>
        <label>SectionSequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__SectionType__c</fullName>
        <label>SectionType</label>
        <picklist>
            <picklistValues>
                <fullName>com_section_header</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>com_section_body</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>com_section_footer</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>c2g__UnitOfWork__c</fullName>
        <label>Unit of Work</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__UseFormat__c</fullName>
        <label>UseFormat</label>
        <picklist>
            <picklistValues>
                <fullName>yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>no</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>com_printformat_inherit</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>c2g__VisibleBetween__c</fullName>
        <defaultValue>false</defaultValue>
        <label>VisibleBetween</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__VisibleFirst__c</fullName>
        <defaultValue>false</defaultValue>
        <label>VisibleFirst</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__VisibleLast__c</fullName>
        <defaultValue>false</defaultValue>
        <label>VisibleLast</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__VisibleOnePage__c</fullName>
        <defaultValue>false</defaultValue>
        <label>VisibleOnePage</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__Width__c</fullName>
        <label>Width</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__X__c</fullName>
        <label>X</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__Y__c</fullName>
        <label>Y</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Section</label>
    <nameField>
        <label>Section Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sections</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>